--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     </b>
 </head>
 <body>
+	  <h2>Here I am going to insert my picture</h2>
+  <img src="/Lokagna1.jpeg">
 	<table>
      <tr>
        <td>
